Apply modularization